--- a/.github/workflows/cd-production.yml
+++ b/.github/workflows/cd-production.yml
@@ -1,36 +1,58 @@
 name: CD - Production
 on:
-    push:
-        branches:
-            - master
+  push:
+    branches:
+      - master
 jobs:
-    production:
-        name: Production
-        runs-on: ubuntu-latest
+  production:
+    name: 'Terraform: plan, apply'
+    runs-on: ubuntu-latest
+    env:
+      TF_VAR_FASTLY_PRODUCTION_API_KEY: ${{ secrets.TF_VAR_FASTLY_PRODUCTION_API_KEY }}
+      TF_VAR_GCS_LOGGING_NAME: ${{ secrets.TF_VAR_GCS_LOGGING_NAME }}
+      TF_VAR_GCS_LOGGING_SECRET_KEY: ${{ secrets.TF_VAR_GCS_LOGGING_SECRET_KEY }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@722adc63f1aa60a57ec37892e133b1d319cae598
+      - name: Terraform Init
+        uses: hashicorp/terraform-github-actions@854901546dbd21e28f8c0610aa5262e3cbda0cb2
+        with:
+          tf_actions_version: 0.12.19
+          tf_actions_subcommand: init
+          tf_actions_comment: false
+          args: tf/production
+      - name: Terraform Import
+        run: terraform import -input=false -config=tf/production -no-color fastly_service_v1.api-service-production-0p7ElaomsexoNHwdMbYJac 0p7ElaomsexoNHwdMbYJac
+      - name: Update Terraform State
+        run: jq '.resources[].instances[].attributes.activate = false' terraform.tfstate > temp && mv temp terraform.tfstate
+      - name: Terraform Plan
+        id: plan
+        uses: hashicorp/terraform-github-actions@854901546dbd21e28f8c0610aa5262e3cbda0cb2
+        with:
+          tf_actions_version: 0.12.19
+          tf_actions_subcommand: plan
+          tf_actions_comment: false
+          args: -out=production.plan tf/production
+      - name: Terraform Apply
+        uses: hashicorp/terraform-github-actions@854901546dbd21e28f8c0610aa5262e3cbda0cb2
+        with:
+          tf_actions_version: 0.12.19
+          tf_actions_subcommand: apply
+          tf_actions_comment: false
+          args: production.plan
+      - name: Fastly Service Metadata
+        id: metadata
+        uses: fastly/fastly-terraform-metadata-action@f46de82a333ad3d9b4a9946c381b307a11b3e6c0
+        with:
+          tf_action_output_changes_present: ${{ steps.plan.outputs.tf_actions_plan_has_changes }}
+      - name: Slack Notification
+        if: steps.plan.outputs.tf_actions_plan_has_changes == 'true'
+        uses: rtCamp/action-slack-notify@4d4ce0d91186ffe6633a8cda645146d38e88228b
         env:
-            TF_ACTION_COMMENT: false
-            TF_VAR_FASTLY_PRODUCTION_API_KEY: ${{ secrets.TF_VAR_FASTLY_PRODUCTION_API_KEY }}
-            TF_VAR_GCS_LOGGING_NAME: ${{ secrets.TF_VAR_GCS_LOGGING_NAME }}
-            TF_VAR_GCS_LOGGING_SECRET_KEY: ${{ secrets.TF_VAR_GCS_LOGGING_SECRET_KEY }}
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v1
-            - name: Terraform init
-              uses: hashicorp/terraform-github-actions/init@v0.4.6
-              with:
-                  args: tf/production
-            - name: Terraform version
-              run: terraform --version
-            - name: Terraform import
-              run: terraform import -input=false -config=tf/production -no-color fastly_service_v1.api-service-production-0p7ElaomsexoNHwdMbYJac 0p7ElaomsexoNHwdMbYJac
-            - name: Update activate attribute in Terraform state file
-              run: jq '.resources[].instances[].attributes.activate = false' terraform.tfstate > temp && mv temp terraform.tfstate
-            - name: Terraform plan
-              id: plan
-              uses: hashicorp/terraform-github-actions/plan@v0.4.6
-              with:
-                  args: -out=production.plan tf/production
-            - name: Terraform apply
-              uses: hashicorp/terraform-github-actions/apply@v0.4.6
-              with:
-                  args: production.plan
+          SLACK_CHANNEL: toru-test
+          SLACK_COLOR: '#5c4ee5'
+          SLACK_ICON: https://avatars1.githubusercontent.com/u/28900900?s=70&v=4
+          SLACK_MESSAGE: ${{ steps.metadata.outputs.fastly_service_config_url }}
+          SLACK_TITLE: ${{ steps.metadata.outputs.fastly_service_version_info }}
+          SLACK_USERNAME: Terraform
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
