--- a/.github/workflows/cd-staging.yml
+++ b/.github/workflows/cd-staging.yml
@@ -1,33 +1,39 @@
 name: CD - Staging
 on:
-    push:
-        branches:
-            - master
+  push:
+    branches:
+      - master
 jobs:
-    staging:
-        name: Staging
-        runs-on: ubuntu-latest
-        env:
-            TF_ACTION_COMMENT: false
-            TF_VAR_FASTLY_STAGING_API_KEY: ${{ secrets.TF_VAR_FASTLY_STAGING_API_KEY }}
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v1
-            - name: Terraform init
-              uses: hashicorp/terraform-github-actions/init@v0.4.6
-              with:
-                  args: tf/staging
-            - name: Terraform version
-              run: terraform --version
-            - name: Terraform import
-              run: terraform import -input=false -config=tf/staging -no-color fastly_service_v1.api-service-staging-1SOF2sf218IFdLZhnqBlKB 1SOF2sf218IFdLZhnqBlKB
-            - name: Update activate attribute in Terraform state file
-              run: jq '.resources[].instances[].attributes.activate = true' terraform.tfstate > temp && mv temp terraform.tfstate
-            - name: Terraform plan
-              uses: hashicorp/terraform-github-actions/plan@v0.4.6
-              with:
-                  args: -out=staging.plan tf/staging
-            - name: Terraform apply
-              uses: hashicorp/terraform-github-actions/apply@v0.4.6
-              with:
-                  args: staging.plan
+  staging:
+    name: 'Terraform: plan, apply'
+    runs-on: ubuntu-latest
+    env:
+      TF_VAR_FASTLY_STAGING_API_KEY: ${{ secrets.TF_VAR_FASTLY_STAGING_API_KEY }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@722adc63f1aa60a57ec37892e133b1d319cae598
+      - name: Terraform Init
+        uses: hashicorp/terraform-github-actions@854901546dbd21e28f8c0610aa5262e3cbda0cb2
+        with:
+          tf_actions_version: 0.12.19
+          tf_actions_subcommand: init
+          tf_actions_comment: false
+          args: tf/staging
+      - name: Terraform Import
+        run: terraform import -input=false -config=tf/staging -no-color fastly_service_v1.api-service-staging-1SOF2sf218IFdLZhnqBlKB 1SOF2sf218IFdLZhnqBlKB
+      - name: Update Terraform State
+        run: jq '.resources[].instances[].attributes.activate = true' terraform.tfstate > temp && mv temp terraform.tfstate
+      - name: Terraform Plan
+        uses: hashicorp/terraform-github-actions@854901546dbd21e28f8c0610aa5262e3cbda0cb2
+        with:
+          tf_actions_version: 0.12.19
+          tf_actions_subcommand: plan
+          tf_actions_comment: false
+          args: -out=staging.plan tf/staging
+      - name: Terraform Apply
+        uses: hashicorp/terraform-github-actions@854901546dbd21e28f8c0610aa5262e3cbda0cb2
+        with:
+          tf_actions_version: 0.12.19
+          tf_actions_subcommand: apply
+          tf_actions_comment: false
+          args: staging.plan
