--- a/.github/workflows/ci-production.yml
+++ b/.github/workflows/ci-production.yml
@@ -1,72 +1,45 @@
 name: CI - Production
 on:
-    pull_request:
-        branches:
-            - master
+  pull_request:
+    branches:
+      - master
 jobs:
-    production_terraform_fmt:
-        name: Terraform fmt
-        runs-on: ubuntu-latest
-        env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v1
-            - name: Terraform fmt
-              uses: hashicorp/terraform-github-actions/fmt@v0.4.6
-              with:
-                  args: tf/production
-    production_terraform_init:
-        name: Terraform init
-        runs-on: ubuntu-latest
-        env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v1
-            - name: Terraform init
-              uses: hashicorp/terraform-github-actions/init@v0.4.6
-              with:
-                  args: tf/production
-            - name: Terraform version
-              run: terraform --version
-    production_terraform_validate:
-        name: Terraform validate
-        runs-on: ubuntu-latest
-        needs: production_terraform_init
-        env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v1
-            - name: Terraform init
-              run: terraform init -input=false -no-color tf/production
-            - name: Terraform validate
-              uses: hashicorp/terraform-github-actions/validate@v0.4.6
-              with:
-                  args: tf/production
-    production_terraform_plan:
-        name: Terraform plan
-        runs-on: ubuntu-latest
-        needs: production_terraform_init
-        env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            TF_VAR_FASTLY_PRODUCTION_API_KEY: ${{ secrets.TF_VAR_FASTLY_PRODUCTION_API_KEY }}
-            TF_VAR_GCS_LOGGING_NAME: ${{ secrets.TF_VAR_GCS_LOGGING_NAME }}
-            TF_VAR_GCS_LOGGING_SECRET_KEY: ${{ secrets.TF_VAR_GCS_LOGGING_SECRET_KEY }}
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v1
-            - name: Terraform init
-              run: terraform init -input=false -no-color tf/production
-            - name: Terraform import
-              run: terraform import -input=false -config=tf/production -no-color fastly_service_v1.api-service-production-0p7ElaomsexoNHwdMbYJac 0p7ElaomsexoNHwdMbYJac
-            - name: Print jq version
-              run: jq --version
-            - name: Add activate attribute to Terraform state
-              run: jq '.resources[].instances[].attributes.activate = false' terraform.tfstate > temp && mv temp terraform.tfstate
-            - name: Terraform plan
-              id: plan
-              uses: hashicorp/terraform-github-actions/plan@v0.4.6
-              with:
-                  args: tf/production
+  production:
+    name: 'Terraform: format, validate, plan'
+    runs-on: ubuntu-latest
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      TF_VAR_FASTLY_PRODUCTION_API_KEY: ${{ secrets.TF_VAR_FASTLY_PRODUCTION_API_KEY }}
+      TF_VAR_GCS_LOGGING_NAME: ${{ secrets.TF_VAR_GCS_LOGGING_NAME }}
+      TF_VAR_GCS_LOGGING_SECRET_KEY: ${{ secrets.TF_VAR_GCS_LOGGING_SECRET_KEY }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@722adc63f1aa60a57ec37892e133b1d319cae598
+      - name: Terraform Init
+        uses: hashicorp/terraform-github-actions@854901546dbd21e28f8c0610aa5262e3cbda0cb2
+        with:
+          tf_actions_version: 0.12.19
+          tf_actions_subcommand: init
+          args: tf/production
+      - name: Terraform Format
+        uses: hashicorp/terraform-github-actions@854901546dbd21e28f8c0610aa5262e3cbda0cb2
+        with:
+          tf_actions_version: 0.12.19
+          tf_actions_subcommand: fmt
+          args: tf/production
+      - name: Terraform Validate
+        uses: hashicorp/terraform-github-actions@854901546dbd21e28f8c0610aa5262e3cbda0cb2
+        with:
+          tf_actions_version: 0.12.19
+          tf_actions_subcommand: validate
+          args: tf/production
+      - name: Terraform Import
+        run: terraform import -input=false -config=tf/production -no-color fastly_service_v1.api-service-production-0p7ElaomsexoNHwdMbYJac 0p7ElaomsexoNHwdMbYJac
+      - name: Update Terraform State
+        run: jq '.resources[].instances[].attributes.activate = false' terraform.tfstate > temp && mv temp terraform.tfstate
+      - name: Terraform Plan
+        uses: hashicorp/terraform-github-actions@854901546dbd21e28f8c0610aa5262e3cbda0cb2
+        with:
+          tf_actions_version: 0.12.19
+          tf_actions_subcommand: plan
+          args: tf/production
